--- a/style.css
+++ b/style.css
@@ -3,17 +3,21 @@
     position: fixed;
     display: flex;
     background-color:  rgb(222, 222, 222);
-    height: 60px;
+    height: fit-content;
     top: 0;
     left: 0;
     right: 0;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
 }
 
-.navbar-ele {
-    padding: 1px;
+.navbar-link {
+    padding: 10px;
+    color: black;
+    text-decoration: none;
 }
 
 body {
