--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 }
 .profile-image {
     border-radius: 50%;
-    height: 120px;
+    max-height: 120px;
     margin-top: 10px;
     margin-bottom: 20px;
     display: flex;
