--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@
     padding-left: 20%;
     padding-right: 20%;
     background-color:  rgb(222, 222, 222);
-
+    align-items: center;
+    text-align: center;
 }
 
 .intro-title {
@@ -51,7 +52,7 @@
 .profile-image {
     border-radius: 50%;
     max-height: 120px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
@@ -99,6 +100,20 @@
     color: gray;
 }
 
+.about-me-text {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.contact-info{
+    display: flex;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
 h1 {
     font-weight: lighter;
 }
@@ -117,7 +132,9 @@ body {
 
 button {
     margin-top: 15px;
+    margin-bottom: 30px;
 }
+
 
 @media screen and (max-width: 600px) {
     .intro {
@@ -143,5 +160,10 @@ button {
         max-width: 90%;
         padding-top: 10px;
         /* border: 2px solid black; */
+    }
+
+    .about-me-text {
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
