--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    padding: 10px;
-    min-height: 60px;
+    padding: 15px 20px;
+    min-height: 50px;
+    box-sizing: border-box; 
 }
 
 .navbar-link {
@@ -23,7 +24,7 @@
 }
 
 .intro {
-    margin-top: 60px;
+    margin-top: 50px;
     margin-left: 0;
     margin-right: 0;
     display: grid;
@@ -49,6 +50,7 @@
     flex-wrap: wrap;
     text-align: center; /* center the text inside flex containe */
 }
+
 .profile-image {
     border-radius: 50%;
     max-height: 120px;
@@ -83,20 +85,18 @@
 }
 .project-text {
     max-width: 40%;
-    /* border: 2px solid black; */
     padding: 15px;
 }
 
 .project-image-contener {
     max-width: 40%;
-    /* border: 2px solid black; */
 }
 .project-image {
     max-width: 100%;
 }
 
 .subtitle {
-    font-weight: lighter;
+    font-weight: 200;
     color: gray;
 }
 
@@ -105,17 +105,64 @@
     margin-right: 20%;
 }
 
-.contact-info{
+.contact-info {
     display: flex;
-    height: 120px;
     justify-content: center;
-    align-items: center;
     margin-top: 20px;
     margin-bottom: 30px;
 }
 
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+}
+
+.logo {
+    transition: transform 0.75s ease;
+}
+
+.logo:hover{
+    transform: rotate(360deg);
+}
+
+.contact-item a {
+    text-decoration: none;
+    color: #333;
+}
+
+.contact-item a:hover {
+    text-decoration: underline;
+    color: #1a79a5;
+}
+
+::selection {
+    background-color: #d8d8d8; /* When hilighting text, the background change to yellow */
+}
+
+.about-me-text p::first-letter {
+    font-weight: bold;
+    line-height: 1;
+}
+
+.subtitle::before {
+    content: '| '; /* Adding a little break before subtitles. */
+}
+
 h1 {
-    font-weight: lighter;
+    font-weight: 200;
 }
 
 h2 {
@@ -126,24 +173,28 @@ body {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
-    font-family: sans-serif;
+    font-family: "Poppins", sans-serif;
     min-width: 320px;
 }
 
 button {
     margin-top: 15px;
     margin-bottom: 30px;
+    color:rgb(66,66,66);
+    cursor: pointer;
 }
 
+button:hover {
+    background-color: black;
+    color: white;
+    transition: 0.3s ease-in-out;
+}
 
 @media screen and (max-width: 600px) {
     .intro {
         padding-left: 5%;
         padding-right: 5%;
     } 
-    /* .navbar {
-        align-items: flex-start;
-    } */
 
     .project {
         flex-direction: column;
@@ -152,14 +203,12 @@ button {
     }
     .project-text {
         max-width: 90%;
-        /* border: 2px solid black; */
         padding: 15px;
     }
     
     .project-image-contener {
         max-width: 90%;
         padding-top: 10px;
-        /* border: 2px solid black; */
     }
 
     .about-me-text {
