--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     align-items: center;
     padding: 15px 20px;
     min-height: 50px;
+    max-height: 100px;
     box-sizing: border-box; 
 }
 
@@ -218,5 +219,15 @@ button:hover {
     .about-me-text {
         margin-left: 5%;
         margin-right: 5%;
+    }
+
+    .navbar-link {
+        padding: 5px;
+        color: black;
+        text-decoration: none;
+    }
+
+    .about-me {
+        height: 20px;
     }
 }
